syntax = "proto3";

import "google/protobuf/empty.proto";
import "Protos/Common.proto";

service PaxosService {
	rpc Prepare(PrepareRequest) returns (PromiseResponse);
	rpc Accept(AcceptRequest) returns (google.protobuf.Empty);
}

service PaxosLearnerService {
	rpc Accepted(AcceptedResponse) returns (google.protobuf.Empty);
}

message PrepareRequest  {
	string senderId = 1;
	int32 timestamp = 2;
}

message PromiseResponse {
	string senderId = 1;
	int32 timestamp = 2;
	repeated Lease value = 3;
	bool hasValue = 4;
	bool nack = 5;
}

message AcceptRequest {
	string senderId = 1;
	int32 timestamp = 2;
	repeated Lease value = 3;
}

message AcceptedResponse {
	string senderId = 1;
	int32 timestamp = 2;
	repeated Lease value = 3;
}